<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding"
    tools:context=".FresnelFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|start"
            android:layout_marginBottom="@dimen/input_spacing">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/distance_a_b_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_fresnel_distance_a_b"
                    android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
                android:id="@+id/distance_a_b_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tbgCheckedButton="@+id/distance_a_b_unit_kilometer">

                <com.nex3z.togglebuttongroup.button.CircularToggle
                    android:id="@+id/distance_a_b_unit_meter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_distance_meter"
                    android:textSize="@dimen/unit_toggle_textsize"
                    app:tbgMarkerColor="@color/colorAccent" />

                <com.nex3z.togglebuttongroup.button.CircularToggle
                    android:id="@+id/distance_a_b_unit_kilometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_distance_kilometer"
                    android:textSize="@dimen/unit_toggle_textsize"
                    app:tbgMarkerColor="@color/colorAccent" />
            </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|start"
            android:layout_marginBottom="@dimen/input_spacing">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/distance_a_o_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_fresnel_distance_a_o"
                    android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
                android:id="@+id/distance_a_o_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tbgCheckedButton="@+id/distance_a_o_unit_kilometer">

                <com.nex3z.togglebuttongroup.button.CircularToggle
                    android:id="@+id/distance_a_o_unit_meter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_distance_meter"
                    android:textSize="@dimen/unit_toggle_textsize"
                    app:tbgMarkerColor="@color/colorAccent" />

                <com.nex3z.togglebuttongroup.button.CircularToggle
                    android:id="@+id/distance_a_o_unit_kilometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_distance_kilometer"
                    android:textSize="@dimen/unit_toggle_textsize"
                    app:tbgMarkerColor="@color/colorAccent" />
            </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|start">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/frequency_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_fresnel_frequency"
                    android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
                android:id="@+id/frequency_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tbgCheckedButton="@+id/frequency_unit_megahertz">

                <com.nex3z.togglebuttongroup.button.CircularToggle
                    android:id="@+id/frequency_unit_megahertz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_freq_megahertz"
                    android:textSize="@dimen/unit_toggle_textsize"
                    app:tbgMarkerColor="@color/colorAccent" />

                <com.nex3z.togglebuttongroup.button.CircularToggle
                    android:id="@+id/frequency_unit_gigahertz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_freq_gigahertz"
                    android:textSize="@dimen/unit_toggle_textsize"
                    app:tbgMarkerColor="@color/colorAccent" />
            </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/result_colon"
                android:textSize="@dimen/result_textsize"
                android:layout_gravity="start" />

            <TextView
                android:id="@+id/result_fresnel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_fresnel"
                android:textSize="@dimen/result_textsize"
                android:layout_gravity="end" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>